Address final comments

--- a/metric-learn-jmlr.tex
+++ b/metric-learn-jmlr.tex
@@ -89,10 +89,9 @@ These use-cases highlight the importance of integrating metric learning with the
 % (not only class supervision, unlike most packages are focused on, including another package for metric learning in Python, \texttt{PyDML})
 % , which is one interesting feature allowed by the metric learning paradigm. 
 Its API is compatible with \texttt{scikit-learn} \citep{scikit-learn}, a prominent machine learning library in Python. This allows for streamlined model selection, evaluation, and pipelining with other estimators.
-Other packages for metric learning already exist, however, they have a different focus: \texttt{DistLearn}\footnote{\url{https://www.cs.cmu.edu/~liuy/distlearn.htm}} and \texttt{pyDML}\footnote{\url{http://github.com/jlsuarezdiaz/pydml}} contain almost only fully supervised or unsupervised metric learning algorithms, and \texttt{pytorch-metric-learning}\footnote{\url{http://github.com/KevinMusgrave/pytorch-metric-learning}} is focused on deep metric learning, using the pytorch framework.
+Other packages for metric learning already exist, however, they have a different focus: \texttt{pyDML} \footnote{\url{http://github.com/jlsuarezdiaz/pydml}} contains almost only fully supervised or unsupervised metric learning algorithms, and \texttt{pytorch-metric-learning} \footnote{\url{http://github.com/KevinMusgrave/pytorch-metric-learning}} is focused on deep metric learning, using the \texttt{pytorch} \citep{pytorch} framework. There is also a Matlab toolkit, \texttt{DistLearn} \footnote{\url{https://www.cs.cmu.edu/~liuy/distlearn.htm}}, that is a webpage gathering several implementations of metric-learning algorithms, however they are mostly fully supervised or unsupervised, and they lack a common interface.
 % The project is developed collaboratively through GitHub, its code is thoroughly tested using continuous integration tools. It was recently included to \texttt{scikit-learn-contrib}, which hosts high-quality \texttt{scikit-learn}-compatible projects.\footnote{\url{https://github.com/scikit-learn-contrib/scikit-learn-contrib}}
 %\aurelien{decide if we include or not a few sentences on positioning wrt other packages}
-
 %, which makes \texttt{metric-learn} stand out from other packages, like \texttt{PyDML} \footnote{\url{https://github.com/jlsuarezdiaz/pyDML}}, which mostly focuses on supervised metric learning algorithms.
 % Acknowledgements should go at the end, before appendices and references
 %The rest of this paper is organized as follows. We first present an overview of the package, followed by a more detailed description of the available algorithms. We then give more details about the API and the software architecture, in particular the compatibility with \texttt{scikit-learn}, and conclude with a discussion of future developments.
